fix(css-components): fix material list item border on mobile devices

--- a/css-components/components-src/stylus/components/list.styl
+++ b/css-components/components-src/stylus/components/list.styl
@@ -691,18 +691,19 @@ list__item()
   padding 16px 0px 16px 0px
   min-width 56px
   line-height 1
-  border-color #eee
 
 .list__item--material__left:empty
 
 .list__item--material__center
   padding 16px 0
   border-color #eee
+  retina-list-item-border(#eee)
 
 .list__item--material__right
   padding 16px 16px 16px 0px
   line-height 1
   border-color #eee
+  retina-list-item-border(#eee)
 
 .list__item--material.list__item--longdivider
   border-bottom 1px solid #eee
